# app/Http/Controllers/Api/V1/JaggasController.php
@@ -7,6 +7,7 @@
   use App\Library\RoomFinderFunctions;
   use App\Models\Jagga;
   use App\Models\User;
+   use App\Models\MyFavourite;
   use App\Models\Images;
   use Lang,DB,Auth;
   class JaggasController extends Controller
@@ -277,6 +278,91 @@
                   //echo "jere"; die;
      return \Response::json(array(  'error' => true,   'message' => Lang::get('messages.resultnotfound')  ) );
    }
+  }
+
+
+
+
+        /**
+ * @SWG\Get(
+ *   path="/room/my-favourite-jaggas",
+ *   summary="My Favourite jaggas",
+ *   operationId="myFavouriteJaggas",
+  *   @SWG\Parameter(
+ *     name="access_token",
+ *     in="header",
+ *     description="Access Token",
+ *     required=true,
+ *     type="string"
+ *   ),
+  *   @SWG\Parameter(
+ *     name="per_page",
+ *     in="formData",
+ *     description="Jaggas Per Page",
+ *     required=false,
+ *     type="integer"
+ *   ),
+   *   @SWG\Parameter(
+ *     name="page_number",
+ *     in="formData",
+ *     description="Per Page Number",
+ *     required=false,
+ *     type="integer"
+ *   ),
+ *   @SWG\Parameter(
+ *     name="user_id",
+ *     in="formData",
+ *     description="User Id",
+ *     required=true,
+ *     type="integer"
+ *   ),
+ *   @SWG\Response(response=200, description="successful operation"),
+ *   @SWG\Response(response=406, description="not acceptable"),
+ *   @SWG\Response(response=500, description="internal server error")
+ * )
+ *
+ */ 
+
+
+            public function myFavouriteJaggas(Request $request){
+     $input = $request->all();     
+     $v = \Validator::make($input,[    
+      'per_page' =>'numeric',
+      'page_number' =>'numeric',
+      "user_id" => 'required|numeric',
+      ]);
+     if ($v->fails())
+     {   
+      $msg = array();
+      $messages = $v->errors();           
+      foreach ($messages->all() as $message) {
+        return \Response::json(array(  'error' => true,  'message' => $message ) );
+      }               
+
+    }  
+
+     $my_favourite_jaggas = Myfavourite::where('user_id' , $input['user_id'])->where('jagga_id' , '!=' , NULL)->get();
+
+     if($my_favourite_jaggas->isNotEmpty()){
+     foreach ($my_favourite_jaggas as $key => $value) {
+       $result[] = Jagga::Myfavourite($value->jagga_id); 
+     }
+      
+    if($result){
+      if(!isset($input['page_number'])){
+        $input['page_number'] = 1;
+      }
+      return \Response::json(array(  'error' => false, 'page_number' => ($input['page_number']+1), 'result' => $result  ) );
+    }else{
+                  //echo "jere"; die;
+     return \Response::json(array(  'error' => true,   'message' => Lang::get('messages.resultnotfound')  ) );
+   }
+     }else{
+       return \Response::json(array(  'error' => true,   'message' => Lang::get('messages.resultnotfound')  ) );
+     }
+
+
+
   }
 
 
